--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,1 +1,8 @@
 @import '../node_modules/bootstrap/less/bootstrap.less';
+@body-bg: @gray-darker;
+@text-color: @gray-lighter;
+@panel-bg: @gray-darker;
+@panel-footer-bg: @gray-dark;
+@panel-default-heading-bg: @gray-dark;
+@panel-default-text: @gray-lighter;
+
