--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,3 +1,5 @@
 @import '../node_modules/bootstrap/less/bootstrap.less';
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+@font-family-sans-serif: 'Raleway', sans-serif;
 @body-bg: @gray-darker;
 @text-color: @gray-lighter;
